@@ -5,6 +5,7 @@ commit_prep
 cvs2vendor
 cvs_acls
 cvscheck
+Debug
 log
 log_accum
 mfpipe
